--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ et-xmlfile==1.1.0
 kombu==5.2.4
 openpyxl==3.1.2
 prompt-toolkit==3.0.38
-psycopg2==2.9.6
+psycopg2-binary==2.9.6
 python-crontab==2.7.1
 python-dateutil==2.8.2
 pytz==2023.3
